added more events and org

--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "dependencies": {
     "dotenv": "^4.0.0",
     "ejs": "^2.5.7",
-    "express": "expressjs/express"
+    "express": "github:expressjs/express",
+    "package.json": "^2.0.1"
   }
 }
